RESOLVED FIXED24282
AX Palindrome error when asking for a specific index of the AXChildren array
https://bugs.webkit.org/show_bug.cgi?id=24282
Summary AX Palindrome error when asking for a specific index of the AXChildren array
chris fleizach
Reported 2009-03-01 17:14:37 PST
When retrieving an attachment object from a range of the children, AX returns the wrong object
Attachments
patch to fix palindrom error (6.08 KB, patch)
2009-03-01 18:21 PST, chris fleizach
oliver: review+
chris fleizach
Comment 1 2009-03-01 18:21:36 PST
Created attachment 28158 [details] patch to fix palindrom error No tests added. Instead DumpRenderTree was changed to exercise the fixed code in WebCore. Layout tests continue to pass.
Mark Rowe (bdash)
Comment 2 2009-03-01 21:25:13 PST
If this was landed then the bug should have been closed.
Note You need to log in before you can comment on or make changes to this bug.