Bug 24282: AX Palindrome error when asking for a specific index of the AXChildren array <https://bugs.webkit.org/show_bug.cgi?id=24282>

Canonical link: https://commits.webkit.org/33419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41349 268f45cc-cd09-0410-ab3c-d52691b4dbfc