WebKitTools/DumpRenderTree/AccessibilityUIElement.h
@@ -60,6 +60,8 @@ public:
     void getLinkedUIElements(Vector<AccessibilityUIElement>&);
     void getDocumentLinks(Vector<AccessibilityUIElement>&);
     void getChildren(Vector<AccessibilityUIElement>&);
+    void getChildrenWithRange(Vector<AccessibilityUIElement>&, unsigned location, unsigned length);
+    
     AccessibilityUIElement getChildAtIndex(unsigned);
     AccessibilityUIElement titleUIElement();
     AccessibilityUIElement parentElement();
